UX changes to improve visibility using the slider. Fixed media buttons

--- a/Assets/Styles/Sass/main.sass
+++ b/Assets/Styles/Sass/main.sass
@@ -146,6 +146,7 @@ body
     height: 7px
     border-radius: 3px
     background: $LightGreenAccent
+    margin: 20px
 
 .modal--slider::-webkit-slider-thumb
   -webkit-appearance: none
@@ -175,7 +176,7 @@ body
     padding: 10px 0 15px 0
 
 .modal--level_text
-    padding: 10px 0 15px 0
+    padding: 5px 0 5px 0
 
 .climate--seat_warmers
     font-size: 47px
